[package]
name = "cht"
version = "0.4.1"
authors = ["Gregory Meyer <me@gregjm.dev>"]
edition = "2018"
description = "Lockfree resizeable concurrent hash table."
repository = "https://github.com/Gregory-Meyer/cht"
readme = "README.md"
license = "AGPL-3.0-or-later"

[features]
default = ["num-cpus"]
num-cpus = ["num_cpus"]

[dependencies]
crossbeam-epoch = "^0.8.2"
num_cpus = { version = "^1.12.0", optional = true }
