[package]
name = "cht"
version = "0.4.1"
authors = ["Gregory Meyer <me@gregjm.dev>"]
edition = "2018"
description = "Lockfree resizeable concurrent hash table."
repository = "https://github.com/Gregory-Meyer/cht"
readme = "README.md"
license = "MIT"

[features]
default = ["num-cpus"]
num-cpus = ["num_cpus"]

[dependencies]
ahash = "0.7"
crossbeam-epoch = "0.9"
num_cpus = { version = "1.12.0", optional = true }

[dev-dependencies]
criterion = "0.3.1"
hashbrown = "0.11"
lock_api = "0.4"
num_cpus = "1.12"
parking_lot = "0.11"

[[bench]]
name = "cht"
harness = false

[[bench]]
name = "mutex"
harness = false
